--- a/source/sass/blocks/tabs.scss
+++ b/source/sass/blocks/tabs.scss
@@ -114,30 +114,22 @@
 }
 
 .item-comment-wrapper {
+  display: flex;  
   min-height: 596px;
   width: 700px;
   position: relative;
   margin-top: 80px;
 }
 
-.item-comment-wrapper--greece {
-  background: url("../img/greece-tabs.png") no-repeat; 
-}
+.item-comment-img {
+  background-color: #84A9CE;
+  height: max-content;
 
-.item-comment-wrapper--albania {
-  background: url("../img/albania-tabs.png") no-repeat;
-}
-
-.item-comment-wrapper--macedonia {
-  background: url("../img/macedonia-tabs.png") no-repeat;
-}
-
-.item-comment-wrapper--montenegro {
-  background: url("../img/montenegro-tabs.png") no-repeat;
-}
-
-.item-comment-wrapper--croatia {
-  background: url("../img/croatia-tabs.png") no-repeat;
+  img {
+    width: 438px;
+    height: 610px;
+    object-fit: cover;
+  }
 }
 
 .item-comment {
@@ -170,7 +162,6 @@
 
     &:before {
       content: "";
-      display: block;
       position: absolute;
       width: 68px;
       height: 0.73px;
@@ -182,71 +173,26 @@
 
   p + p {
     padding-bottom: 0;
-  }
+  }  
+}
 
-  .item-avatar {
+.item-avatar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  color: $dark;
+  position: relative;
+
+  p {
+    padding-bottom: 0;
+    padding-left: 16px;
     font-size: 16px;
     font-weight: 500;
-    letter-spacing: -0.47px;   
-    padding-left: 50px;    
-    padding-top: 6px; 
-    color: $dark;
-    position: relative;
-  }
+    letter-spacing: -0.47px;
 
-  .item-avatar--greece::before {
-    content: '';
-    background-image: url("../img/ava-greece.png");
-    background-color: $white;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 38px;
-    height: 38px;
-  }
-
-  .item-avatar--albania::before {
-    content: '';
-    background-image: url("../img/ava-albania.png");
-    background-color: $white;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 38px;
-    height: 38px;
-  }
-
-  .item-avatar--macedonia::before {
-    content: '';
-    background-image: url("../img/ava-macedonia.png");
-    background-color: $white;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 38px;
-    height: 38px;
-  }
-
-  .item-avatar--montenegro::before {
-    content: '';
-    background-image: url("../img/ava-montenegro.png");
-    background-color: $white;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 38px;
-    height: 38px;
-  }
-
-  .item-avatar--croatia::before {
-    content: '';
-    background-image: url("../img/ava-croatia.png");
-    background-color: $white;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 38px;
-    height: 38px;
+    &::before {
+      display: none;
+    }
   }
 }
 
@@ -311,22 +257,29 @@
 
   .item-comment-wrapper {
     width: 100%;
-    background-position: center;
-    background-size: cover;
     min-height: 415px;
+  }
+
+  .item-comment-img {
+    width: 100%;
+    height: 415px;
+    
+    img {
+      width: 100%;
+      height: 415px;
+      object-fit: cover;
+    }
   }
 
   .item-comment {
     display: flex;
     flex-direction: column;
-    margin: auto;
-    bottom: -100px;
+    margin: 80px auto 0;
     left: 0;
     right: 0;
     top: 0;
     width: 382px;
-    height: 367px;
-    max-height: 100%; 
+    max-height: 100%;    
   }
 }
 
@@ -357,10 +310,28 @@
     }
   }
 
+  .item-comment-wrapper {
+    min-height: 520px;
+  }
+
   .item-comment {
+    text-align: center;
     width: 268px;
-    height: 431px;
     max-height: 100%;
     padding: 30px 20px;
+    margin-top: 50px;
+
+    p:before {
+      left: 80px;
+    }
+  }
+
+  .item-avatar {
+    flex-direction: column;
+
+    p {
+      padding-top: 10px;
+      padding-left: 0;
+    }
   }
 }
