--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -13,7 +13,7 @@
 }
 
 .modal-overlay--visible {
-    display: block;
+  display: block;
 }
 
 .modal-window {
@@ -38,7 +38,7 @@
 }
 
 .modal-window__img {
-  background-color: #8392A3;
+  background-color: #8392a3;
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
     background-image: url("../img/modal-img2x.png");
@@ -60,42 +60,42 @@
 }
 
 .modal-window__wrapper {
-    display: flex;
-    flex-direction: column;
-    width: 390px;
-    align-items: center;
-    padding: 72px 60px 0;
+  display: flex;
+  flex-direction: column;
+  width: 390px;
+  align-items: center;
+  padding: 72px 60px 0;
 }
 
 .modal-window__wrapper .form-input {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 0;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 0;
 
-    input {
-        margin-bottom: 20px;
-    }
+  input {
+    margin-bottom: 20px;
+  }
 }
 
 @media screen and (max-width: 767px) {
-    .modal-window__img {
-        display: none;
-    }
+  .modal-window__img {
+    display: none;
+  }
 
   .modal-window {
-      width: 100%;
-      top: 50%;
-      left: 50%;
+    width: 100%;
+    top: 50%;
+    left: 50%;
   }
 
   .modal-window__wrapper {
-      background-color: $white;
-      height: 100vh;
-      padding: 100px 15px 0;
-      width: 100%;
+    background-color: $white;
+    height: 100vh;
+    padding: 100px 15px 0;
+    width: 100%;
 
-      form {
-        width: 100%;
-      }
+    form {
+      width: 100%;
+    }
   }
 }
