--- a/source/sass/blocks/price.scss
+++ b/source/sass/blocks/price.scss
@@ -12,7 +12,7 @@
 }
 
 .price__content {
-  display: flex;    
+  display: flex;
   flex-direction: column;
   padding: 30px;
   margin-right: 30px;
@@ -31,7 +31,7 @@
     }
 
     .price-list p::after {
-      content: '';
+      content: "";
       position: absolute;
       width: 310px;
       height: 1px;
@@ -56,7 +56,7 @@
 }
 
 .price__title {
-  display: flex;    
+  display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   padding-bottom: 40px;
@@ -86,7 +86,7 @@
     letter-spacing: 0;
     position: relative;
 
-    &:after {
+    &::after {
       content: "";
       display: block;
       position: absolute;
@@ -130,7 +130,7 @@
 
 .price__button {
   margin-top: 54px;
-  text-align: center;      
+  text-align: center;
 
   button {
     display: inline-block;
@@ -141,14 +141,14 @@
     padding: 30px 0;
     color: $white;
     background-color: $accentMain;
-    width: 306px;        
-    text-transform: uppercase;        
+    width: 306px;
+    text-transform: uppercase;
 
     &:hover,
     &:focus {
       background-color: $accentHover;
     }
-  }    
+  }
 }
 
 .price__info {
@@ -159,7 +159,7 @@
 
 .price__info-title {
   padding-bottom: 60px;
-  
+
   h2 {
     font-size: 55px;
     font-weight: 600;
@@ -176,7 +176,7 @@
     letter-spacing: 0;
     line-height: 170%;
 
-    &:before {
+    &::before {
       content: "";
       display: block;
       position: absolute;
@@ -212,7 +212,7 @@
     position: relative;
 
     &::before {
-      content: ' ';
+      content: "";
       background: url("../img/icons/phone.svg") no-repeat;
       position: absolute;
       width: 24px;
@@ -221,8 +221,8 @@
       left: -5px;
     }
 
-    &:hover, 
-    &:focus{
+    &:hover,
+    &:focus {
       color: $accentHover;
     }
 
@@ -238,7 +238,7 @@
     flex-direction: column-reverse;
     margin-top: 115px;
     padding: 0;
-  } 
+  }
 
   .price__wrapper {
     justify-content: center;
@@ -291,7 +291,7 @@
       }
 
       .price-list p::after {
-        content: '';
+        content: "";
         position: absolute;
         width: 248px;
         height: 1px;
@@ -300,7 +300,7 @@
         right: 0;
         bottom: -20px;
       }
-      
+
       .price-list li {
         &::before {
           background: url("../img/icons/check-black.svg");
@@ -327,13 +327,13 @@
   }
 
   .price-list {
-    padding:  0 20px;
+    padding: 0 20px;
     margin-bottom: 80px;
-    
+
     p {
       text-align: center;
-      
-      &:after {
+
+      &::after {
         width: 248px;
         left: 0;
         right: 0;
@@ -361,7 +361,7 @@
     margin-top: 0;
     text-align: center;
 
-    button{
+    button {
       font-size: 10px;
       padding: 20px 0;
       width: 100%;
@@ -378,7 +378,7 @@
       }
     }
   }
- 
+
   .price__info {
     padding: 0 20px;
     margin-bottom: 30px;
@@ -407,10 +407,10 @@
       padding: 0;
 
       &::before {
-       display: none;
+        display: none;
       }
     }
-  }  
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -435,4 +435,3 @@
     }
   }
 }
-
