--- a/source/sass/blocks/tabs.scss
+++ b/source/sass/blocks/tabs.scss
@@ -1,6 +1,6 @@
 .tabs {
   width: 100%;
-  max-width: 1445px;  
+  max-width: 1445px;
   background-image: url("../img/icons/map.png");
   background-position: right 0 top 125px;
   background-repeat: no-repeat;
@@ -10,7 +10,7 @@
 .tabs__wrapper {
   max-width: 1220px;
   padding: 0 25px;
-  margin: 0 auto;    
+  margin: 0 auto;
 }
 
 .tab-header {
@@ -78,11 +78,11 @@
     position: relative;
     padding-bottom: 50px;
 
-    &:before {
+    &::before {
       content: "";
       display: block;
       position: absolute;
-      width:175px;
+      width: 175px;
       height: 3px;
       background-color: $accentMain;
       left: 0;
@@ -114,7 +114,7 @@
 }
 
 .item-comment-wrapper {
-  display: flex;  
+  display: flex;
   min-height: 596px;
   width: 700px;
   position: relative;
@@ -122,7 +122,7 @@
 }
 
 .item-comment-img {
-  background-color: #84A9CE;
+  background-color: #84a9ce;
   height: max-content;
 
   img {
@@ -157,10 +157,10 @@
     line-height: 28px;
     color: $semiDark;
     position: relative;
-    padding-bottom: 35px;        
+    padding-bottom: 35px;
     background-color: $white;
 
-    &:before {
+    &::before {
       content: "";
       position: absolute;
       width: 68px;
@@ -168,12 +168,12 @@
       background-color: $accentMain;
       left: 0;
       top: -20px;
-    }        
+    }
   }
 
   p + p {
     padding-bottom: 0;
-  }  
+  }
 }
 
 .item-avatar {
@@ -235,7 +235,7 @@
       text-align: center;
       padding-bottom: 25px;
 
-      &:before {
+      &::before {
         display: none;
       }
     }
@@ -263,7 +263,7 @@
   .item-comment-img {
     width: 100%;
     height: 415px;
-    
+
     img {
       width: 100%;
       height: 415px;
@@ -279,7 +279,7 @@
     right: 0;
     top: 0;
     width: 382px;
-    max-height: 100%;    
+    max-height: 100%;
   }
 }
 
@@ -321,7 +321,7 @@
     padding: 30px 20px;
     margin-top: 50px;
 
-    p:before {
+    p::before {
       left: 80px;
     }
   }
