--- a/source/sass/blocks/visited.scss
+++ b/source/sass/blocks/visited.scss
@@ -7,7 +7,7 @@
 .visited__header {
   width: 358px;
   margin-bottom: 60px;
-  overflow: hidden;  
+  overflow: hidden;
 
   h2 {
     font-size: 55px;
@@ -20,11 +20,11 @@
   p {
     font-size: 16px;
     font-weight: 400;
-    letter-spacing: -0.47px;  
+    letter-spacing: -0.47px;
     color: rgba(44, 46, 63, 0.7);
     position: relative;
 
-    &:before {
+    &::before {
       content: "";
       display: block;
       position: absolute;
@@ -47,7 +47,7 @@
 .visited-item {
   width: 30%;
   min-height: 430px;
-  background-color: #20C8CF;
+  background-color: #20c8cf;
   margin-right: 5%;
   margin-bottom: 101px;
   position: relative;
@@ -60,7 +60,7 @@
 
 .visited-item--greece {
   background: url("../img/greece.png") no-repeat center center / cover;
-  background-color: #84A9CE;
+  background-color: #84a9ce;
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
     background-image: url("../img/greece2x.png");
@@ -70,7 +70,7 @@
 
 .visited-item--albania {
   background: url("../img/albania.png") no-repeat center center / cover;
-  background-color: #0E545D;
+  background-color: #0e545d;
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
     background-image: url("../img/albania2x.png");
@@ -79,18 +79,18 @@
 }
 
 .visited-item--macedonia {
-    background: url("../img/macedonia.png") no-repeat center center / cover;
-    background-color: #9E6A4F;
+  background: url("../img/macedonia.png") no-repeat center center / cover;
+  background-color: #9e6a4f;
 
-    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../img/macedonia2x.png");
-      background-size: 350px 430px;
-    }
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background-image: url("../img/macedonia2x.png");
+    background-size: 350px 430px;
+  }
 }
 
 .visited-item--montenegro {
   background: url("../img/montenegro.png") no-repeat center center / cover;
-  background-color: #628F55;
+  background-color: #628f55;
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
     background-image: url("../img/montenegro2x.png");
@@ -100,7 +100,7 @@
 
 .visited-item--croatia {
   background: url("../img/croatia.png") no-repeat center center / cover;
-  background-color: #425D56;
+  background-color: #425d56;
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
     background-image: url("../img/croatia2x.png");
@@ -117,9 +117,10 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background: rgba(20, 21, 23, .6);
+  background: rgba(20, 21, 23, 0.6);
   opacity: 0;
-  transition: .3s ease-in-out;
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
 }
 
 .visited-button a {
@@ -138,7 +139,7 @@
   left: 50%;
   border: 1px solid $white;
   transform: translate(-50%, -50%) scale(0);
-  transition: .3s ease-in-out;
+  transition: 0.3s ease-in-out;
   background: transparent;
   cursor: pointer;
 }
@@ -147,18 +148,17 @@
   opacity: 1;
 }
 
-.visited-item:hover .visited-button a{
+.visited-item:hover .visited-button a {
   transform: translate(-50%, -50%) scale(1);
 }
 
 .visited-title {
   position: absolute;
   bottom: 0;
-  background-color: #fff;
+  background-color: $white;
   text-align: center;
   left: 67px;
   right: 67px;
-  text-align: center;
 
   p {
     padding: 16px 0;
@@ -192,9 +192,9 @@
       padding-bottom: 25px;
     }
 
-    p:before {
-        display: none;
-      }      
+    p::before {
+      display: none;
+    }
   }
 
   .visited-item {
