--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -3,11 +3,11 @@ $retina-dppx: 1.5dppx;
 
 $darkExtra: #141517;
 $darkNotExtra: rgba(20, 21, 23, 0.7);
-$dark: #2C2E3F;
+$dark: #2c2e3f;
 $semiDark: rgba(44, 46, 63, 0.7);
 $grey: rgba(44, 46, 63, 0.3);
-$accentMain: #FE7865;
-$accentHover: #F17D4B;
-$light: #FBF8F8;
-$white: #fff;
-$black: #000;
+$accentMain: #fe7865;
+$accentHover: #f17d4b;
+$light: #fbf8f8;
+$white: #ffffff;
+$black: #000000;
